# simple-engine

./: Cargo.toml  README.md
simple-engine/: Cargo.toml
simple-engine/src/: lib.rs  main.rs
simple-engine/src/systems/: mod.rs
simple-engine/src/systems/input/: device.rs  mod.rs
simple-engine/src/systems/input/layers/: input_read.rs  mod.rs
simple-engine/src/systems/render/: frame_output_state.rs  mod.rs  render_pipeline.rs  render_state.rs  shaders.rs
simple-engine/src/systems/render/command/: mod.rs
simple-engine/src/systems/render/layers/: mod.rs  render_commands.rs  render_pass_end.rs  render_pass_start.rs  render_pipeline_init.rs  render_state_init.rs  shader_init.rs
simple-engine/src/systems/render/material/: cache.rs  mod.rs
simple-engine/src/systems/ui/: mod.rs
simple-engine/src/systems/ui/layers/: mod.rs  ui_test_layer.rs
simple-engine/src/ui/components/button/: button.css  button.xml  mod.rs
simple-engine/src/window/: device.rs  mod.rs
simple-layers/: Cargo.toml
simple-layers/src/: layer.rs  lib.rs  scheduler.rs
simple-layers/src/tests/: layer.rs
simple-layers/src/types/: id.rs  mod.rs  sync.rs
simple-ui/: Cargo.toml
simple-ui/examples/layer_render/: main.rs
simple-ui/src/: lib.rs  style.rs  tree.rs  view.rs
simple-ui/src/events/: mod.rs
simple-ui/src/layers/: flex.rs  mod.rs  shape.rs  stack.rs
simple-ui/src/render/: command.rs  default.rs  mod.rs  writer.rs
simple-ui/src/source/: xml.rs
simple-ui/src/tests/: layer_serde.rs  render.rs
xui/: Cargo.toml  class-styles.css
xui-macro/: Cargo.toml
xui-macro/src/: lib.rs
xui/src/: algo.rs  component.rs  css.rs  lib.rs  node.rs  rtree.rs  style.rs  tree.rs  view.rs  xml.rs
