[package]
name = "simple-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "simple_engine_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simple-engine"
path = "src/main.rs"

[dependencies]
xdi = "0.1"
anyhow = "1"
ahash = "0.8"
dashmap = "6"

winit = { version = "0.30", features = ["rwh_06"] }

tracing = "0.1"
tracing-subscriber = "0.3"

cfg-if = "1"

parking_lot = "0.12"

simple-layers = { path = "../simple-layers" }
simple-ui = { path = "../simple-ui"}

tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread"] }

chrono = "0.4"

wgpu = "24"

raw-window-handle = "0.6"

mint = "0.5"

bytemuck = "1"

uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2.1"