[package]
name = "simple-layers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ahash = "0.8"

xdi = { version = "0", features = ["task-local"] }

chrono = "0.4"

uuid = { version = "1", features = ["v4"] }

tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread"] }
async-broadcast = "0.7"

parking_lot = "0.12"

tracing = "0.1"
