[package]
name = "simple-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

mint = { version = "*", features = ["serde"] }

uuid = { version = "1", features = ["v4", "serde"] }

ahash = { version = "*", features = ["serde"] }

derive_builder = "*"

tracing = "*"

earcutr = "*"

quick-xml = "0.37"

csscolorparser = "0.7.0"

rstar = { version = "*", features = ["mint"] }

[dev-dependencies]
wgpu = { version = "23.0.1", features = ["webgl"]}
winit = { version = "0.30.7", features = ["rwh_05"] }
tokio = { version = "*", features = ["full"] }
bytemuck = { version = "1.16", features = [ "derive" ] }
tracing-subscriber = "*"